--- a/vrps-sply/src/main/resources/templates/manager/vip-manager.html
+++ b/vrps-sply/src/main/resources/templates/manager/vip-manager.html
@@ -1,45 +1,35 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>VIP管理</title>
-    <div th:replace="pub/head_meta"/>
-    <div th:replace="pub/head_link"/>
-    <div th:replace="pub/head_script"/>
-    <script th:src="@{/static/js/manager/vipManager.js}" ></script>
-    <link th:href="@{/static/css/manager/list.css}" type="text/css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>用户信息列表</title>
+    <!--导入layui css文件-->
+    <link rel="stylesheet" href="/static/plugins/layui/css/layui.css">
+    <!--导入layui js文件-->
+    <script type="text/javascript" src="/static/plugins/layui/layui.js"></script>
+
+    <!--导入Jquery-->
+    <script type="text/javascript" src="/static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.serializejson.js"></script>
+
+    <!--引入多选样式文件-->
+    <link href="/static/plugins/layui/css/modules/formSelects-v4.css" rel="stylesheet" />
 </head>
-<body>
-<!--内容 START-->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <table class="table table-bordered  table-striped">
-                <thead class="thead-light">
-                <tr>
-                    <th>加油卡号</th>
-                </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="list:${vipCodes}">
-                        <td th:text="${list.code}"></td>
-                    </tr>
-                </tbody>
-            </table>
-            <a class="btn btn-info" id="create_code">生成</a><br/><br/>
-            <div>
-                <table class="table table-bordered  table-striped">
-                    <thead class="thead-light">
-                    <tr>
-                        <th>加油卡号(请将下面生成的卡号加入到第三方支付的商品列表中)</th>
-                    </tr>
-                    </thead>
-                    <tbody id="create_code_new"></tbody>
-                </table>
-            </div>
-         </div>
-     </div>
-</div>
-<!--内容 END-->
+<body class="layui-layout-body">
+<table class="layui-hide" id="vip-id" lay-filter="vip-id"></table>
+<script type="text/html" id="toolbar">
+    <div class="layui-btn-container">
+        <button class="layui-btn layui-btn-sm" lay-event="create">一键生成</button>
+    </div>
+</script>
+<!--=========================================模板 END=====================================-->
+
+<!--导入外部自定义js-->
+<script type="text/javascript" src="/static/js/manager/vip-manager.js"></script>
 </body>
 </html>
