--- a/vrps-sply/src/main/resources/templates/manager/catalog.html
+++ b/vrps-sply/src/main/resources/templates/manager/catalog.html
@@ -1,90 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>目录</title>
-    <div th:replace="pub/head_meta"/>
-    <div th:replace="pub/head_link"/>
-    <div th:replace="pub/head_script"/>
-    <script th:src="@{/static/js/manager/catalog.js}" ></script>
-    <link th:href="@{/static/css/manager/catalog.css}" type="text/css" rel="stylesheet">
+    <!--导入layui css文件-->
+    <link rel="stylesheet" href="/static/plugins/layui/css/layui.css">
+    <!--导入layui js文件-->
+    <script type="text/javascript" src="/static/plugins/layui/layui.js"></script>
+
+    <!--导入Jquery-->
+    <script type="text/javascript" src="/static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.serializejson.js"></script>
+    <script type="text/javascript" src="/static/js/manager/catalog-v1.js"></script>
+
+    <!--引入多选样式文件-->
+    <link href="/static/plugins/layui/css/modules/formSelects-v4.css" rel="stylesheet" />
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col">
-            <div style="width:50%;float:left;height: auto;overflow: hidden;">
-                <span>一级分类</span><br/>
-                <div contenteditable="true" class="catalog_name" style="display: inline-block;"></div>
-                <a href="javascript:;" class="add_CataLog_btn btn">添加</a><br/><br/>
-
-                <span>二级子分类</span>
-                <select class="cataLogId">
-                   <option th:each="cataLogList_var:${cataLogList}" th:value="${cataLogList_var.id}" th:text="${cataLogList_var.name}"></option>
-                </select>
-                <br/>
-                <div contenteditable="true" class="subClass_name" style="display: inline-block;"></div>
-                <a href="javascript:;" class="add_SubClass_btn btn">添加</a><br/><br/>
-
-                <span>类型</span><br/>
-                <select class="cataLogId_subClass">
-                    <option th:each="cataLogList_var:${cataLogList}" th:value="${cataLogList_var.id}" th:text="${cataLogList_var.name}"></option>
-                </select>
-                <select class="subClassId"></select><br/>
-                <div contenteditable="true" class="type_name" style="display: inline-block;"></div>
-                <a href="javascript:;" class="add_Type_btn btn">添加</a><br/><br/>
-                <br/>
-
-                <h2><span style="color:blue;">一级目录</span>--><span style="color:green;">二级目录</span>--><span style="color:#fd5c11;">类型</span></h2>
-                <span th:each="list:${cataLogList}">
-                    <span style="color:blue;" th:text="${list.name}"></span>
-                    <br/>
-                    <span th:if="${list.subClassList!=null}" th:each="li:${list.subClassList}">
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span style="color:green;" th:text="${li.name}"></span>-->
-                        <span th:each="l:${typeList}">
-                            <span th:if="${li.id==l.subclassId}" style="color:#fd5c11;" th:text="${l.name}"></span>
-                        </span>
-                        <br/>
-                    </span>
-                    <br/>
-                </span>
+<div class="layui-fluid">
+    <div class="layui-row">
+        <div class="layui-col-sm6">
+            <div class="grid-demo grid-demo-bg1">
+                <form class="layui-form" action="">
+                    <div class="layui-form-item">
+                        <label class="layui-form-label">输入框</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="title" required lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                            <a class="layui-btn">添加</a>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div style="width:50%;float:left;height: auto;overflow: hidden;">
-
-                <span>地区</span><br/>
-                <div contenteditable="true" class="loc_name" style="display: inline-block;"></div>
-                <a href="javascript:;" class="add_Loc_btn btn" >添加</a><br/><br/>
-
-
-                <span>级别</span><br/>
-                <div contenteditable="true" class="level_name" style="display: inline-block;"></div>
-                <a href="javascript:;" class="add_Level_btn btn">添加</a><br/><br/>
-
-
-                <span>年代</span><br/>
-                <div contenteditable="true" class="decade_name" style="display: inline-block;"></div>
-                <a href="javascript:;" class="add_Decade_btn btn">添加</a><br/><br/>
-
-
-                <h2>地区-->级别-->年代</h2>
-                <br/>
-                <span>地区--></span>
-                <span th:each="locList_list:${locList}" th:text="${locList_list.name}+'&nbsp;&nbsp;&nbsp;'"></span>
-                <br/>
-                <span>级别--></span>
-                <span th:each="levelList_list:${levelList}" th:text="${levelList_list.name}+'&nbsp;&nbsp;&nbsp;'"></span>
-                <br/>
-
-                <span>年代--></span><br/>
-                <span th:each="decadeList_list:${decadeList}">
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span  th:text="${decadeList_list.name}"></span>
-                    <br/>
-                </span>
-
-                <br/>
-            </div>
+        </div>
+        <div class="layui-col-sm6">
+            <div class="grid-demo" id="catalog-tree"></div>
         </div>
     </div>
 </div>
 </body>
 </html>
+
