--- a/vrps-sply/src/main/resources/templates/manager/list.html
+++ b/vrps-sply/src/main/resources/templates/manager/list.html
@@ -18,9 +18,9 @@
         <div class="col">
             <div class="search-box">
                 <div style="margin:0px auto;width:100%;overflow: hidden;">
-                    <a style="float: left;margin-left: 2px; margin-bottom: 5px;" class="layui-btn layui-btn-sm" th:href="@{/video/manager/film.html}">添加影片</a>
-                    <form th:action="@{/video/manager/list.html}" style="display: inline-block; margin-top: 10px;" method="GET">
-                        <input type="search" name="name" class="input" th:value="${name}" autocomplete="off"
+                    <a style="float: left;margin-left: 2px; " class="layui-btn layui-btn-sm" th:href="@{/video/manager/film.html}">添加影片</a>
+                    <form th:action="@{/video/manager/list.html}" style="display: inline-block;" method="GET">
+                        <input type="search" name="name" class="layui-input" th:value="${name}" autocomplete="off"
                                placeholder="请输入影片名称"/>
                     </form>
                 </div>
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
 
-                <div style="width:100%;margin: 5px auto;height: auto;overflow: hidden;border: 1px solid #ddd;">
+                <div style="width:100%;margin: 5px auto;height: auto;overflow: hidden;border: 1px solid #009688!important;">
                     <nav style="float: right;">
                         <ul class="pagination">
                             <li th:class="${'page-item'+(page.isFirstPage ? ' disabled':'')}">
