进一步完善目录管理

--- a/vrps-sply/src/main/resources/static/css/index/detail.css
+++ b/vrps-sply/src/main/resources/static/css/index/detail.css
@@ -73,7 +73,7 @@ a {
 }
 
 .col-sm-4 .pic a, .col-sm-4 .pic a:visited {
-    background: #444;
+    background: #6c757d;
     display: block;
     width: 100%;
     line-heighT: 44px;
