--- a/vrps-sply/src/main/resources/static/css/index/index.css
+++ b/vrps-sply/src/main/resources/static/css/index/index.css
@@ -65,7 +65,7 @@ a{
     width: 100%;
     height: auto;
     overflow: auto;
-    background:#343a40;
+    background:#6c757d;
 }
 .user-nav li{
     width:100%;
