--- a/vrps-sply/src/main/resources/templates/manager/catalog.html
+++ b/vrps-sply/src/main/resources/templates/manager/catalog.html
@@ -150,12 +150,24 @@
 </script>
 
 <script type="text/html" id="loc-edit-form" >
-    <form id="loc-edit-layui-form" class="layui-form" style="margin: 10px;" lay-filter="loc-edit">
-        <div class="layui-form-item">
-            <label class="layui-form-label">名称：</label>
+    <form id="loc-edit-layui-form" class="layui-form"  lay-filter="loc-edit">
+        <div class="layui-form-item" style="margin: 40px;">
+            <label class="layui-form-label" style="text-align: center;">名称：</label>
             <div class="layui-input-block">
                 <input type="text" name="name" id="loc-edit-name" lay-verify="name" autocomplete="off"
-                       placeholder="角色名称" class="layui-input">
+                       placeholder="地区" class="layui-input" value="{{d.name}}">
+            </div>
+        </div>
+    </form>
+</script>
+
+<script type="text/html" id="decade-edit-form" >
+    <form id="decade-edit-layui-form" class="layui-form"  lay-filter="loc-edit">
+        <div class="layui-form-item" style="margin: 40px;">
+            <label class="layui-form-label" style="text-align: center;">名称：</label>
+            <div class="layui-input-block">
+                <input type="text" name="name" id="decade-edit-name" lay-verify="name" autocomplete="off"
+                       placeholder="地区" class="layui-input" value="{{d.name}}">
             </div>
         </div>
     </form>
