--- a/vrps-sply/src/main/resources/templates/pub/head.html
+++ b/vrps-sply/src/main/resources/templates/pub/head.html
@@ -1,6 +1,6 @@
 <div style="width: 100%;height: auto;overflow:hidden; margin-bottom: 10px;" xmlns:th="http://www.thymeleaf.org">
     <!-- 头部begin -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+    <nav style="padding: 20px;" class="navbar navbar-expand-md bg-secondary navbar-dark fixed-top">
         <a class="navbar-brand" href="/">欢迎来到小火车SP-LY最新影片资源</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
