--- a/vrps-sply/src/main/resources/static/css/index/home.css
+++ b/vrps-sply/src/main/resources/static/css/index/home.css
@@ -20,10 +20,10 @@
     height: auto;
 }
 
-.case  h5{
+.case h5{
     height: 30px;
     overflow: hidden;
-    background-color: #343a40 !important;
+    background-color: #6c757d !important;
     line-height: 30px;
     padding-left: 17px;
     color: #fff;
@@ -36,7 +36,7 @@
 .mox h5{
     height: 30px;
     overflow: hidden;
-    background-color: #343a40 !important;
+    background-color: #6c757d !important;
     line-height: 30px;
     padding-left: 5px;
     color: #fff;
